Fixed collapse logic with multiple listings

--- a/assets/styles/ant-overrides.css
+++ b/assets/styles/ant-overrides.css
@@ -33,7 +33,7 @@ button {
     padding-right: 15px;
 }
 
-.ant-row-flex > [class*="ant-col-"] {
+.ant-row-flex>[class*="ant-col-"] {
     padding-left: 0px;
     padding-right: 0px;
 }
@@ -41,4 +41,8 @@ button {
 .ant-row, .ant-row-flex {
     margin-left: -15px;
     margin-right: -15px;
+}
+
+.ant-collapse>.ant-collapse-item>.ant-collapse-header {
+    padding: 0px
 }
